[package]
name = "wldd-rs"
version = "0.1.0"
edition = "2024"
authors = ["Shaobo Song <shnusongshaobo@gmail.ccom>"]
description = "A pure Rust implementation of ldd for PE files"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
goblin = "0.7"  # parse PE files
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.3"
